--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,9 @@ dependencies:
     sdk: flutter
   intl: any
   provider: ^6.1.2
-  supabase_flutter: ^2.3.4
+  supabase_flutter: ^2.4.0
+  riverpod_annotation: ^2.3.5
+  supabase_auth_ui: ^0.4.3
 
 dev_dependencies:
   flutter_test:
