Setup the configurations for custom fonts
The font Figtree from the figma prototype is declaired in the pubspec file and downloaded to the 'font' folder in the root dir.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,7 +88,6 @@ flutter_icons:
 # The following section is specific to Flutter packages.
 flutter:
   generate: true
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -110,10 +109,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Figtree
+      fonts:
+        - asset: fonts/Figtree-VariableFont_wght.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
