Create rate dish button, and adjust coloscheme.
Co-authored-by: Allan <asia@itu.dk>
Co-authored-by: Lauritz <lana@itu.dk>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   supabase_auth_ui: ^0.4.3
   hooks_riverpod: ^2.5.1
   build_runner: ^2.4.9
+  gradient_elevated_button: ^0.0.8
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
