Share preferences handles saving an identifier of user and their rating

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,9 +4,10 @@
   },
   "cmake.configureOnOpen": true,
     "cSpell.words": [
-        "Componenet",
-        "supabase",
-        "userapp"
+      "Componenet",
+      "prefs",
+      "supabase",
+      "userapp"
     ],
   "deno.enablePaths": [
     "supabase/functions"
