--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   hooks_riverpod: ^2.5.1
   build_runner: ^2.4.9
   gradient_elevated_button: ^0.0.8
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
