--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,20 +69,20 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "lib/resources/junkfood background.png"
+  image_path: "lib/resources/jf.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
   web:
     generate: true
-    image_path: "lib/resources/junkfood background.png"
+    image_path: "lib/resources/jf.png"
     background_color: "#202020"
     theme_color: "#hexcode"
   windows:
     generate: true
-    image_path: "lib/resources/junkfood background.png"
+    image_path: "lib/resources/jf.png"
     icon_size: 48 # min:48, max:256, default: 48
   macos:
     generate: true
-    image_path: "lib/resources/junkfood background.png"
+    image_path: "lib/resources/jf.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
