Rename app package to junkfood

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
       "Componenet",
       "prefs",
       "supabase",
-      "userapp"
+      "Junkfood"
     ],
   "deno.enablePaths": [
     "supabase/functions"
