--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,20 +42,20 @@ dev_dependencies:
 flutter_icons:
   android: 'launcher_icon'
   ios: true
-  image_path: 'lib/resources/logo.png'
+  image_path: 'assets/images/logo.png'
   min_sdk_android: 21 # android min sdk min:16, default 21
   web:
     generate: true
-    image_path: 'lib/resources/logo.png'
+    image_path: 'assets/images/logo.png'
     background_color: '#hexcode'
     theme_color: '#hexcode'
   windows:
     generate: true
-    image_path: 'lib/resources/logo.png'
+    image_path: 'assets/images/logo.png'
     icon_size: 48 # min:48, max:256, default: 48
   macos:
     generate: true
-    image_path: 'lib/resources/logo.png'
+    image_path: 'assets/images/logo.png'
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -67,4 +67,4 @@ flutter:
   fonts:
     - family: Figtree
       fonts:
-        - asset: fonts/Figtree-VariableFont_wght.ttf
+        - asset: assets/fonts/Figtree-VariableFont_wght.ttf
