--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,9 @@ flutter:
   generate: true
   uses-material-design: true
 
+  assets:
+    - assets/images/logo.png
+
   fonts:
     - family: Figtree
       fonts:
