--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dev_dependencies:
   riverpod_lint: ^2.3.10
 
 flutter_icons:
-  android: 'launcher_icon'
+  android: 'ic_launcher'
   ios: true
   image_path: 'assets/images/logo.png'
   min_sdk_android: 21 # android min sdk min:16, default 21
