--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,14 +18,14 @@ dependencies:
   flutter_guid: ^0.3.1
   flutter_hooks: ^0.20.5
   flutter_riverpod: ^2.5.1
-  gradient_elevated_button: ^0.0.8
+  gradient_elevated_button: ^1.0.0
   hooks_riverpod: ^2.5.1
   intl: any
   provider: ^6.1.2
   riverpod_annotation: ^2.3.5
   shared_preferences: ^2.2.3
   supabase_flutter: ^2.4.0
-  supabase_auth_ui: ^0.4.3
+  supabase_auth_ui: ^0.5.4
 
 dev_dependencies:
   flutter_test:
@@ -33,8 +33,8 @@ dev_dependencies:
 
   build_runner: ^2.4.9
   custom_lint: ^0.6.4
-  flutter_launcher_icons: '^0.13.1'
-  flutter_lints: ^3.0.0
+  flutter_launcher_icons: ^0.14.1
+  flutter_lints: ^5.0.0
   mockito: ^5.4.4
   riverpod_generator: ^2.4.0
   riverpod_lint: ^2.3.10
