feat: Automate iOS app version releases on push tags

--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -1,7 +1,7 @@
 on:
-  pull_request:
-    branches:
-      - release
+  push:
+    tags:
+      - '*'
 
 jobs:
   build:
@@ -13,5 +13,26 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: stable
-      - run: flutter pub get
-      - run: flutter build ios --release --no-codesign
+      - name: get dependencies
+        run: flutter pub get
+      - name: build iOS app
+        run: flutter build ios --release --no-codesign
+      - name: release
+        uses: actions/create-release@v1
+        id: create_release
+        with:
+          draft: false
+          prerelease: false
+          release_name: ${{ github.ref }}
+          tag_name: ${{ github.ref }}
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+      - name: upload iOS artifact
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: build/ios/iphoneos/Runner.app
+          asset_name: Runner.app
+          asset_content_type: application/gzip
