sh feat: Update ai_issues.yml to include different model and base branches for issue tracking.

--- a/.github/workflows/ai_issues.yml
+++ b/.github/workflows/ai_issues.yml
@@ -11,6 +11,6 @@ jobs:
     with:
       issue-number: ${{ github.event.issue.number }}
       base-branch: ${{ github.event.repository.default_branch }}
-      model: openrouter/deepseek/deepseek-r1
+      model: openrouter/deepseek/deepseek-r1:free
     secrets: 
       openrouter_api_key: ${{ secrets.OPENROUTER_API_KEY }}
